# src/api/routes/routesDelete.js
@@ -3,6 +3,7 @@ import { gSheetsController } from "../controllers/gSheetsController.js";
 
 export const router = Router();
 
-router.delete("/:appName/:tableName/:id", gSheetsController.remove
+router.delete("/apps/:appName/:tableName/:id", gSheetsController.remove
   // #swagger.tags = ['tables']
+  // #swagger.summary = 'delete one item by id'
 );
