# src/api/routes/routesPut.js
@@ -4,13 +4,16 @@ import {gSheetsServices} from "../services/gSheetsServices.js"
 
 export const router = Router();
 
-router.put("/:appName/:tableName/:id", async(req, res)=>{
-  const folderName = req.params.appName
-  const sheetName = req.params.tableName
-  const id = req.params.id
-  const objToUpdate = req.body
-  const result = await gSheetsServices.update(folderName, sheetName, id, objToUpdate)
-  res.send(result)
-}
+router.put("/apps/:appName/:tableName/:id", gSheetsController.update
+
+// async(req, res)=>{
+//   const folderName = req.params.appName
+//   const sheetName = req.params.tableName
+//   const id = req.params.id
+//   const objToUpdate = req.body
+//   const result = await gSheetsServices.update(folderName, sheetName, id, objToUpdate)
+//   res.send(result)
+// }
   // #swagger.tags = ['tables']
+  // #swagger.summary = 'update one item by id'
 );
